src/objects/C501_Other_Name__c.object
<CustomObject>
    <description>Detail of Contact - searchable, designed to help keep track of constituents&apos; previous / alternate names</description>
    <fields>
        <fullName>C501_Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Other Names</relationshipLabel>
        <relationshipName>C501_Previous_Names</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C501_End_Date__c</fullName>
        <description>CoreId</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_IsPreferred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Process Builder to populate the Contact&apos;s Preferred Name field</description>
        <inlineHelpText>Use this checkbox to indicate that this is the contact&apos;s preferred name - this will trigger the system to update the Preferred Name field on the contact record</inlineHelpText>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Other_Name__c</fullName>
        <description>CoreId</description>
        <label>Other Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Start_Date__c</fullName>
        <description>CoreId</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Type__c</fullName>
        <description>CoreId - may need to add values</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>First Name</fullName>
                </value>
                <value>
                    <fullName>Last Name</fullName>
                </value>
                <value>
                    <fullName>Nickname</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Other Name</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Other Name Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Names</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>